WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262878
uievents/mouse/mousemove_prevent_default_action.tentative.html WPT is failing
https://bugs.webkit.org/show_bug.cgi?id=262878
Summary
uievents/mouse/mousemove_prevent_default_action.tentative.html WPT is failing
Abrar Rahman Protyasha
Reported
2023-10-09 02:15:47 PDT
WPT status here:
https://wpt.fyi/results/uievents/mouse/mousemove_prevent_default_action.tentative.html?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-events
It was added as an WPT due to the discussion in:
https://github.com/w3c/uievents/issues/278
Discussed in chromium here:
https://bugs.chromium.org/p/chromium/issues/detail?id=346473
There's an active test change proposal here:
https://github.com/web-platform-tests/interop/issues/396
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-09 02:16:04 PDT
<
rdar://problem/116668701
>
Abrar Rahman Protyasha
Comment 2
2023-10-10 04:24:13 PDT
There is a web compat risk associated with changing WebKit's behavior to what this test expects. Refer to
https://github.com/w3c/uievents/issues/278
for extended discussion. Having said that, it is well understood that calling `preventDefault` on `mousemove` events should _NOT_ prevent `selectionchange`.
Abrar Rahman Protyasha
Comment 3
2023-10-10 04:40:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18890
EWS
Comment 4
2023-10-16 12:06:20 PDT
Committed
269370@main
(4ed18444c723): <
https://commits.webkit.org/269370@main
> Reviewed commits have been landed. Closing PR #18890 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug